[package]
name = "bevy01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy-inspector-egui = "0.19.0"
bevy_asset = "0.11.2"
bevy_egui = "0.21.0"
bevy_reflect = "0.11.2"
bevy_render = "0.11.2"
bevy_window = "0.11.2"
egui = "0.22.0"
egui-gizmo = "0.11.0"
egui_dock = "0.7.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
